# AffectiveAI

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml
data/: kdef_split.csv
notebooks/: 01_data_exploration.ipynb  02_deepface_baseline.ipynb  02_degradation_tests.ipynb  02_training_mobilenet_v3.ipynb  03_deepface_baseline.ipynb  03_evaluation.ipynb  03b_evaluation_extra.ipynb  04_fine_tuning_mobilenet.ipynb  04_visual_analysis.ipynb
outputs/: evaluation_results.csv
outputs/logs/frozen/: hparams.yaml  metrics.csv
outputs/logs/unfrozen/: hparams.yaml  metrics.csv
outputs/logs/version_0/: metrics.csv
outputs/logs/version_1/: metrics.csv
src/const/: maps.py  paths.py  transforms.py
src/data/: degrade_data.py  loaders.py  split.py
src/models/: baseline.py  evaluate.py  mobile_net.py  trainer.py
src/utils/: constants.py  utils.py
